@@ -7,6 +7,7 @@ version 1.2.1
 * Fix error for sigsq estimate when there are variables consisting entirely of missing data
 * More verbose messages for debugging intialization of bartMachine objects
 * Ability to pass in an estimate of sigsq. This is important since this step may take a lot of time for datasets with a large number of features
+* When creating partial dependence plots, there is now an option for proportion of data to use. The lower the proportion, the lower the resolution but the speedier the plot will generate.
 
 version 1.2.0
 
